# riscv64-test

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: build-riscv64-deps.sh  build-riscv64.sh  riscv64-env.sh
src/: main.rs
ui/: app-window.slint
